# General_Purpose_Agent-

./: .gitignore  AGENTS.md  ARCHITECTURE.md  COOKBOOK.md  DEBUG_JOURNAL.md  EXPERIMENT_REPORT.md  ISSUES.md  LEARNING_JOURNAL.md  MAINTAIN.md  PACKAGE_README.txt  README.md  README.overview.md  SETUP_UBUNTU.md  TB_BASELINE_RESULTS.md  TB_EXPERIMENT_PLAN.md  TEST_COVERAGE.md  TODO_shortterm.md  UPGRADE_ROADMAP.md  audit.md  config.yaml  main.py  pyproject.toml
capability/: __init__.py  example_tools.py  knowledge_capability.py  layer_injector.py  tool_capability.py
config/: consolidation_tools.yaml  l1.yaml  l2.yaml  l3.yaml  reflect.yaml  tools.yaml
core/: agent.py  agent_context.py  agent_loop.py  chain_factory.py  config.py  config_loader.py  domain_registry.py  env_loader.py  executor.py  flexible_knowledge.py  json_repair.py  layer_context.py  layer_message.py  llm_client.py  llm_factory.py  meta_driver.py  model_manager.py  monitor.py  philosophy.py  reflect_config.py  round_tree.py  runtime_registry.py  seed_knowledge.py  session.py  setup.py  skill_layer.py  task.py  task_runner.py  types.py
data/: l1_rules.json
docs/: 4.5-layer-agent-design.md  4.5-layer-agent-references.md  cognitive-agent-design-v2.md  cognitive-agent-phase1-plan.md  environment-setup.md  reflexion-architecture-detail.md  voyager-skill-system-detail.md
knowledge/: l2_index.json
scripts/: README.md  douzero_agent.py  gradio_app.py  integration_test_capability.py  interactive_agent.py  interactive_kb_agent.py  leduc_cognitive_agent.py  maia_vs_stockfish.py  mock_llm.py  monitor_chess.py  (+36 more)
(+314 files in other folders)
